saves/test/demo_full_20240802_193545/edgedetect2/debug_1/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp edgedetect2_tb.v edgedetect2.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
edgedetect2_tb.v:131: $finish called at 610000 (1ps)

iverilog cmd 2 error:

